# task_planner_interface

./: .gitignore  LICENSE  README.md
mongocpp_easy_driver/: CMakeLists.txt  package.xml
mongocpp_easy_driver/include/mongocpp_easy_driver/: mongocpp_easy_driver.h
mongocpp_easy_driver/src/: test_mongo_driver.cpp
mongocpp_easy_driver/src/mongocpp_easy_driver/: mongocpp_easy_driver.cpp
reactive_task_planner_dispatcher/: CMakeLists.txt  package.xml
reactive_task_planner_dispatcher/include/reactive_task_planner_dispatcher/: check_agent_state.h  double_task_dispatcher.h  reset_new_piece.h  single_task_dispatcher.h  switch_digital.h  there_is_new_piece.h  trigger_new_piece.h  wait_agent_feedback.h
reactive_task_planner_dispatcher/launch/: test_tree.launch  test_tree_human.launch  test_tree_presentation.launch  test_tree_robot.launch
reactive_task_planner_dispatcher/src/: run_tree.cpp
reactive_task_planner_dispatcher/tree/: demo_tree.xml  demo_tree2.xml  demo_tree_final.xml  groot_palette.xml  human_robot.xml  human_tree.xml  prov.xml  robot_tree.xml  test_check_agent.xml  test_reactive.xml  test_tree.xml  test_tree_vero.xml  test_tree_vero2.xml  test_tree_vero2_test.xml
task_planner/: CMakeLists.txt  MODEL.lp  Model.lp  README.md  package.xml  requirements.txt
task_planner/config/: config.yaml  knowledge_base.yaml  task_goal_example.yaml  task_planning_optimization.yaml  utils.py
task_planner/launch/: planning.launch  test.launch
task_planner/src/: Problem.py  Prove.py  Task.py  TaskDispatcher.py  TaskPlanner.py  TaskPlannerAreas.py  TaskPlannerHumanAware.py  TaskPlannerHumanAwareEasier.py  TaskPlannerHumanAwareLast.py  TaskPlannerHumanAwareLearning.py  TaskPlannerHumanAwareRelaxed.py  TaskPlannerHumanAwareSimplified.py  TaskPlannerSynergistic.py  TaskPlannerSynergisticBand.py  TaskPlannerSynergisticEasier.py  TaskPlannerTest.py  execute_offline.py  execute_offline_real_test.py  main.py  main_test.py  reload_scene.py  show_timeline.py  solutions_statistics.py  solutions_statistics_irim.py  solutions_statistics_ppt.py  utils.py
task_planner_dispatcher/: CMakeLists.txt  README.md  package.xml
task_planner_dispatcher/launch/: task_dispatcher.launch  task_dispatcher_duo_async.launch
task_planner_dispatcher/plans/: example.yaml  example_mongo.yaml
task_planner_dispatcher/src/: dispatcher_double_async.cpp  dispatcher_double_sync.cpp  dispatcher_single.cpp
task_planner_gui/: CMakeLists.txt  README.md  package.xml
task_planner_gui/launch/: gui.launch  gui_interface.launch  minimal_gui.launch
task_planner_gui/qt_src/: db_backend.cpp  db_backend.h  main.cpp  qml.qrc  robot_backend.cpp  robot_backend.h  user_backend.cpp  user_backend.h  visual_user_backend.cpp  visual_user_backend.h
task_planner_gui/qt_src/assets/images/: schema_nodes_gui_planner.odp
task_planner_gui/qt_src/qml_components/agents/: RobotDelegate.qml  RobotDelegate_old.qml  RobotListView.qml  RobotListView_old.qml  RobotTaskBox.qml  UserDelegate.qml  UserListview.qml  UserTaskButtons.qml
task_planner_gui/qt_src/qml_components/pages/: FirstPage.qml  SecondPage.qml  ThirdPage.qml
task_planner_gui/qt_src/qml_components/plots/: DefaultChart.qml  LabelPoints.qml  TextPoints.qml
task_planner_gui/qt_src/qml_main/: DashMenu.qml  main.qml
task_planner_gui/scripts/: gui_interface.py  minimal_gui.py
task_planner_gui/scripts/db/: data_task_planner_db.sql
task_planner_gui/scripts/db/limbo/: data_task_plan_db.sql  data_task_planner_db_old.sql
task_planner_gui/scripts/matlab/: pathdef.m  read_from_db.m
task_planner_interface/: CMakeLists.txt  README.md  package.xml
task_planner_interface/bash/: run_training.sh
task_planner_interface/include/task_planner_interface/: agent_status.h  generic_skill.h  go_to_skill.h  human_executor.h  pick_skill.h  pickplace_skill.h  place_skill.h  task_executor.h
task_planner_interface/launch/: action_exectutor.launch  demo_hrc.launch
task_planner_interface/src/: actionServerTaskPlanner.py  human_executor_node.cpp  human_node.cpp  mongoHandler.py  sequence_executor_node.cpp  syncronization_node.cpp  taskServiceManager.py  task_executor_node.cpp  test_mongo_node.cpp
task_planner_interface/src/task_planner_interface/: agent_status.cpp  generic_skill.cpp  go_to_skill.cpp  human_executor.cpp  pick_skill.cpp  pickplace_skill.cpp  place_skill.cpp  task_executor.cpp
task_planner_interface_msgs/: CMakeLists.txt  README.md
task_planner_interface_msgs/action/: TaskExecute.action
task_planner_interface_msgs/msg/: MotionTaskExecutionRequest.msg  TaskAgents.msg  TaskStatistics.msg
task_planner_interface_msgs/srv/: BasicSkill.srv  DeleteRecipe.srv  PauseSkill.srv  PickPlaceSkill.srv  TaskResult.srv  TaskStatistics.srv  TaskType.srv  TasksInformation.srv  TasksStatistics.srv
task_planner_statistics/: CMakeLists.txt  MODEL.lp  README.md  package.xml  requirements.txt
task_planner_statistics/file/: distance_monitoring_neighboring_tasks.csv  distance_monitoring_safety_area.csv  distance_monitoring_safety_area_both.csv  distance_monitoring_safety_area_both_cases_two_name.csv  distance_monitoring_safety_area_no_aware.csv  distance_monitoring_safety_areas_synergy_aware_30_rep.csv  fovr_monitoring_safety_area_no_aware.csv  ovr_monitoring_neighboring_tasks.csv  ovr_monitoring_safety_area.csv  ovr_monitoring_safety_areas_synergy_aware_30_rep.csv
task_planner_statistics/launch/: distance_monitoring.launch  distance_statistics.launch  task_planner_statistics.launch
task_planner_statistics/msg/: TaskSynergy.msg
task_planner_statistics/scripts/: MongoInterface.py  analyse_solutions.py  delate_recipe.py  distance_analysis.py  distance_analysis_simplified.py  new.py  recipe_distance_ovr_stats.py  recipe_distance_stats.py  recipe_distance_stats_last_version.py  recipe_duration.py  recipe_durations_stats.py  recipe_ovr.py  recipe_stats.py  rinomina.py  statistical_pipeline.py
task_planner_statistics/src/: Pipeline.py  computeRecipeDurations.py  distance_monitoring.py  mongoStatistics.py
task_planner_statistics/srv/: TaskSynergies.srv
(+58 files in other folders)
