<?xml version="1.0"?>
<package format="2">
  <name>mongocpp_easy_driver</name>
  <version>0.0.0</version>
  <description>The mongocpp_easy_driver package</description>
  <maintainer email="marco.faroni@stiima.cnr.it">hypatia</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>libmongoc-1.0-0</depend>
  <export>
  </export>
</package>
