<?xml version="1.0"?>
<package format="2">
  <name>task_planner_gui</name>
  <version>0.0.0</version>
  <description>The task_planner_gui package</description>

  <maintainer email="marco.faroni@stiima.cnr.it">hypatia</maintainer>
  <maintainer email="stefano.ghidini@stiima.cnr.it">hypatia</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>subscription_notifier</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>subscription_notifier</build_export_depend>
  <depend>message_runtime</depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>subscription_notifier</exec_depend>
  <depend>task_planner_interface_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
