<?xml version="1.0"?>
<package format="2">
  <name>task_planner_interface</name>
  <version>0.0.0</version>
  <description>The task_planner_interface package</description>
  <maintainer email="hypatia@todo.todo">hypatia</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>manipulation_msgs</build_depend>
  <build_depend>object_loader</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>manipulation_msgs</build_export_depend>
  <build_export_depend>object_loader</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>manipulation_msgs</exec_depend>
  <exec_depend>object_loader</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>subscription_notifier</depend>
  <depend>task_planner_interface_msgs</depend>
  <depend>mongocpp_easy_driver</depend>
  <depend>libmongoc-1.0-0</depend>




  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
